# NovelDownloader

./: .gitignore  Cargo.toml  README.md  settings.gradle
app/: .gitignore  build.gradle
app/src/main/kotlin/br/balladesh/noveldownloader/: App.kt  Calibre.kt  Cli.kt  Disk.kt  Network.kt  SSL.kt  Utils.kt
app/src/main/kotlin/br/balladesh/noveldownloader/providers/: BoxNovel.kt  Factory.kt  NovelProvider.kt  Volare.kt
app/src/test/kotlin/br/balladesh/noveldownloader/: AppTest.kt
src/: cache.rs  calibre.rs  cmd_line.rs  files.rs  main.rs  url.rs
src/novels/: boxnovel.rs  eatapplepies.rs  mod.rs  providers.rs  wuxiaworldco.rs
src/workers/: consumer.rs  mod.rs  producer.rs  types.rs
